[gd_scene load_steps=4 format=3 uid="uid://stuxyx8rw0a7"]

[ext_resource type="Script" uid="uid://dt2kt1wmmdnb2" path="res://scripts/Main.gd" id="1_elqb8"]
[ext_resource type="PackedScene" uid="uid://e0xxmu2la7ho" path="res://scenes/Skeleton.tscn" id="2_rvslj"]
[ext_resource type="PackedScene" uid="uid://bto2balokx0ds" path="res://scenes/Player.tscn" id="3_0bbpv"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_elqb8")
skel_scene = ExtResource("2_rvslj")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="BattleSection" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Sky" type="ColorRect" parent="VBoxContainer/BattleSection"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.862745, 1, 1, 1)

[node name="Ground" type="ColorRect" parent="VBoxContainer/BattleSection"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.75
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0, 0.286275, 0, 1)

[node name="SpawnPoint" type="Marker2D" parent="VBoxContainer/BattleSection/Ground"]
position = Vector2(400, 41.5)

[node name="PuzzleSection" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/PuzzleSection"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.6, 0.6, 0.6, 1)

[node name="SkelTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="Player" parent="." instance=ExtResource("3_0bbpv")]
position = Vector2(14, 304)

[connection signal="timeout" from="SkelTimer" to="." method="_on_skel_timer_timeout"]
[connection signal="hit" from="Player" to="." method="_on_player_hit"]
